# Pidog

./: CMakeLists.txt  Commandes.txt
include/: ActionDict.hpp  Gait.hpp  I2C.hpp  IMU.hpp  PWM.hpp  Pidog.hpp  Robot.hpp  Servo.hpp
src/: ActionDict.cpp  Gait.cpp  IMU.cpp  PWM.cpp  Pidog.cpp  Robot.cpp  main.cpp
